--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 50px;
+    font-size: 2rem;
 }
 
 .actions {
