--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body {
 
 .display {
     height: 300px;
-    line-height: 300px;
     width: 500px;
+    text-align: center;
     background-color: lightyellow;
     border-radius: 20px;
     overflow: hidden;
